--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
            <li><a href="#">Services</a></li>
            <li><a href="#">Skills</a></li>
            <li><a href="#">Contact Me</a></li>
+           <li><a href="#">testing</a></li>
            <a href="#" class="btn">Subscribe</a>
        </ul>
      </nav>
