verandering footer menu foto

--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
     <link
       href="../sandbox/Josefin_Sans/JosefinSans-Italic-VariableFont_wght.ttf"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/Primer/20.4.4/primer.css"
-      integrity="sha512-+o8q5sqUp0Via9XWj/wVyBQc1TrvjBYTxRbWZ3x32qVhLO+plRZuyRGolV4BW43MnQ3NQZ0YIENRa9a5Z/BR6g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
   </head>
   <body>
     <div class="navigationbar-logo">
@@ -27,8 +20,9 @@
           <li><a href="#">About Me</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Skills</a></li>
+          <li><a href="#">Projects</a></li>
           <li><a href="#">Contact Me</a></li>
-          <a href="#" class="btn">Subscribe</a>
+          <a href="#" class="btn">Send Request!</a>
         </ul>
       </nav>
     </div>
@@ -66,7 +60,8 @@
         <p>
           I am a starting web developer. I can provide easy websites while
           workin with HTML & CSS. At the moment i'm also learning JavaScript. So
-          it will not take long before I will be a Frontend Developer.
+          it will not take long before I will be a Frontend Developer. So grab
+          your chance and dont be too late!
         </p>
         <button type="button">Let's Talk</button>
       </div>
@@ -82,7 +77,11 @@
     <div class="box">
       <div class="card">
         <div class="image">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <svg
+            class="picture"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+          >
             <path
               d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
             />
@@ -102,7 +101,11 @@
       </div>
       <div class="card">
         <div class="image">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <svg
+            class="picture"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+          >
             <path
               d="M224 16c-6.7 0-10.8-2.8-15.5-6.1C201.9 5.4 194 0 176 0c-30.5 0-52 43.7-66 89.4C62.7 98.1 32 112.2 32 128c0 14.3 25 27.1 64.6 35.9c-.4 4-.6 8-.6 12.1c0 17 3.3 33.2 9.3 48H45.4C38 224 32 230 32 237.4c0 1.7 .3 3.4 1 5l38.8 96.9C28.2 371.8 0 423.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7c0-58.5-28.2-110.4-71.7-143L415 242.4c.6-1.6 1-3.3 1-5c0-7.4-6-13.4-13.4-13.4H342.7c6-14.8 9.3-31 9.3-48c0-4.1-.2-8.1-.6-12.1C391 155.1 416 142.3 416 128c0-15.8-30.7-29.9-78-38.6C324 43.7 302.5 0 272 0c-18 0-25.9 5.4-32.5 9.9c-4.7 3.3-8.8 6.1-15.5 6.1zm56 208H267.6c-16.5 0-31.1-10.6-36.3-26.2c-2.3-7-12.2-7-14.5 0c-5.2 15.6-19.9 26.2-36.3 26.2H168c-22.1 0-40-17.9-40-40V169.6c28.2 4.1 61 6.4 96 6.4s67.8-2.3 96-6.4V184c0 22.1-17.9 40-40 40zm-88 96l16 32L176 480 128 288l64 32zm128-32L272 480 240 352l16-32 64-32z"
             />
@@ -122,7 +125,11 @@
       </div>
       <div class="card">
         <div class="image">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+          <svg
+            class="picture"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 640 512"
+          >
             <path
               d="M64 96c0-35.3 28.7-64 64-64H512c35.3 0 64 28.7 64 64V352H512V96H128V352H64V96zM0 403.2C0 392.6 8.6 384 19.2 384H620.8c10.6 0 19.2 8.6 19.2 19.2c0 42.4-34.4 76.8-76.8 76.8H76.8C34.4 480 0 445.6 0 403.2zM281 209l-31 31 31 31c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-48-48c-9.4-9.4-9.4-24.6 0-33.9l48-48c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9zM393 175l48 48c9.4 9.4 9.4 24.6 0 33.9l-48 48c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l31-31-31-31c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0z"
             />
@@ -154,14 +161,18 @@
     <!------footer section---->
 
     <div class="footer">
-      <p>Maria Nerwa</p>
-      <p>For more click down below to subscribe.</p>
-      <div class="social">
-        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+      <div class="sub-footer">
+        <p>Maria Nerwa</p>
+        <p>For more click down below to subscribe.</p>
+        <div class="social-wrapper">
+          <a href="#"><i class="fa-brands fa-facebook social"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter social"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram social"></i></a>
+        </div>
       </div>
-      <p class="end">Copyright By <span>Maria Nerwa</span></p>
+      <div class="footer-end">
+        <p>Copyright by <span>Maria Nerwa</span></p>
+      </div>
     </div>
   </body>
 </html>
