--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
         <p>Maria Nerwa</p>
         <p><span>For more click down below to subscribe.</span></p>
         <div class="social-wrapper">
-          <a href="#"><i class="fa-brands fa-facebook social"></i></a>
-          <a href="#"><i class="fa-brands fa-twitter social"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram social"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
         </div>
       </div>
       <div class="footer-end">
