--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
       </div>
       <div class="footer-end">
-        <p>Copyright by <span>Maria Nerwa</span></p>
+        <p>&copy; Copyright by <span>Maria Nerwa</span></p>
       </div>
     </div>
   </body>
