--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -153,6 +153,11 @@
       </div>
     </div>
 
+    <!--Skills section-->
+    <div>
+      <h2>SKILLS</h2>
+    </div>
+
     <!------Contact me section---->
 
     <div class="next">
