--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,6 +15,7 @@
       href="../sandbox/Josefin_Sans/JosefinSans-Italic-VariableFont_wght.ttf"
     />
   </head>
+  <!--Navigation bar section-->
   <body>
     <div class="navigationbar-logo">
       <h2 class="logo">Portfo<span>lio</span></h2>
@@ -155,9 +156,12 @@
 
     <!--Skills section-->
     <div>
-      <h2>SKILLS</h2>
+      <div>
+        <h2>SKILLS</h2>
+        <p>HTML, CSS and JavaScript</p>
+      </div>
     </div>
-
+    <div class="container">
     <!------Contact me section---->
 
     <div class="next">
