--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,7 +26,6 @@
           <li><a href="#">Services</a></li>
           <li><a href="#">Skills</a></li>
           <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact Me</a></li>
           <a href="#" class="btn">Send Request!</a>
         </ul>
       </nav>
@@ -154,14 +153,21 @@
       </div>
     </div>
 
-    <!--Skills section-->
+    <!--------Skills section------->
     <div>
       <div>
         <h2>SKILLS</h2>
         <p>HTML, CSS and JavaScript</p>
       </div>
     </div>
-    <div class="container">
+
+    <!------Projects section------>
+    <div>
+      <h2>Projects</h2>
+      <button class="btn" data-filter=".html">HTML</button>
+      <button class="btn" data-filter=".css">CSS</button>
+      <button class="btn" data-filter=".javascript">JavaScript</button>
+    </div>
     <!------Contact me section---->
 
     <div class="next">
