--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -164,9 +164,9 @@
     <!------Projects section------>
     <div>
       <h2>Projects</h2>
-      <button class="btn" data-filter=".html">HTML</button>
-      <button class="btn" data-filter=".css">CSS</button>
-      <button class="btn" data-filter=".javascript">JavaScript</button>
+      <button class="button" data-filter=".html">HTML</button>
+      <button class="button" data-filter=".css">CSS</button>
+      <button class="button" data-filter=".javascript">JavaScript</button>
     </div>
     <!------Contact me section---->
 
