--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -56,9 +56,6 @@
     <div class="container">
       <!----about section -->
       <div class="about">
-        <div class="image">
-          <img src="./foto-cover-werb.jpg" />
-        </div>
         <div class="about-text">
           <h2>About Me</h2>
           <h5>Web <span>Developer</span></h5>
@@ -167,6 +164,20 @@
       <button class="button" data-filter=".html">HTML</button>
       <button class="button" data-filter=".css">CSS</button>
       <button class="button" data-filter=".javascript">JavaScript</button>
+      <div class="projects-wrapper">
+        <div class="project-card">
+          <!-- titel, plaatje, omschrijving -->
+        </div>
+        <div class="project-card">
+          <!-- titel, plaatje, omschrijving -->
+        </div>
+        <div class="project-card">
+          <!-- titel, plaatje, omschrijving -->
+        </div>
+        <div class="project-card">
+          <!-- titel, plaatje, omschrijving -->
+        </div>
+      </div>
     </div>
     <!------Contact me section---->
 
