--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -167,6 +167,9 @@
       <div class="projects-wrapper">
         <div class="project-card">
           <!-- titel, plaatje, omschrijving -->
+          <h1>Passenger Counter App</h1>
+          <img />
+          <p>Here you can see my first JavaScript project</p>
         </div>
         <div class="project-card">
           <!-- titel, plaatje, omschrijving -->
