--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -173,9 +173,14 @@
         </div>
         <div class="project-card">
           <!-- titel, plaatje, omschrijving -->
+          <h1>Blackjack game</h1>
+          <img />
+          <p>Here you can see my second JavaScript project</p>
         </div>
         <div class="project-card">
-          <!-- titel, plaatje, omschrijving -->
+          <h1>CHROME extensions</h1>
+          <img />
+          <p>Here you can see my third JavaScript project</p>
         </div>
         <div class="project-card">
           <!-- titel, plaatje, omschrijving -->
