--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -184,6 +184,10 @@
         </div>
         <div class="project-card">
           <!-- titel, plaatje, omschrijving -->
+          <h1>...</h1>
+          <img />
+          <p>Here you can see my forth JavaScript project</p>
+        </div>
         </div>
       </div>
     </div>
