--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -187,6 +187,9 @@
           <h1>...</h1>
           <img />
           <p>Here you can see my forth JavaScript project</p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis dignissimos placeat dolores, repudiandae illo ullam doloremque deleniti ea hic inventore eum, aliquam ducimus dolor libero, laboriosam recusandae voluptate blanditiis veniam?
+        </p>
         </div>
         </div>
       </div>
