--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -176,24 +176,11 @@
           <h1>Blackjack game</h1>
           <img />
           <p>Here you can see my second JavaScript project</p>
-        </div>
-        <div class="project-card">
-          <h1>CHROME extensions</h1>
-          <img />
-          <p>Here you can see my third JavaScript project</p>
-        </div>
+        </div>ß
         <div class="project-card">
           <!-- titel, plaatje, omschrijving -->
-          <h1>...</h1>
-          <img />
-          <p>Here you can see my forth JavaScript project</p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis dignissimos placeat dolores, repudiandae illo ullam doloremque deleniti ea hic inventore eum, aliquam ducimus dolor libero, laboriosam recusandae voluptate blanditiis veniam?
-        </p>
-        </div>
         </div>
       </div>
-    </div>
     <!------Contact me section---->
 
     <div class="next">
